--- a/index.html
+++ b/index.html
@@ -663,6 +663,11 @@
                             />
                             <button type="submit" class="form-btn-footer">
                                 Подписаться
+                                <svg class="footer-icon" width="24" height="24">
+                                    <use
+                                        href="./images/icons.svg#icon-icon-send-1"
+                                    ></use>
+                                </svg>
                             </button>
                         </div>
                     </form>
@@ -688,6 +693,13 @@
                             <label class="form-label" for="user-name"
                                 >Имя</label
                             >
+                            <a href="" class="form-link">
+                                <svg class="form-icon" width="12" height="12">
+                                    <use
+                                        href="./images/icons.svg#icon-Vector-name"
+                                    ></use>
+                                </svg>
+                            </a>
                             <input
                                 type="text"
                                 class="form-input"
@@ -703,6 +715,13 @@
                             <label class="form-label" for="user-tel"
                                 >Телефон</label
                             >
+                            <a href="" class="form-link">
+                                <svg class="form-icon" width="13" height="13">
+                                    <use
+                                        href="./images/icons.svg#icon-Vector-tel"
+                                    ></use>
+                                </svg>
+                            </a>
                             <input
                                 type="tel"
                                 class="form-input"
@@ -717,6 +736,13 @@
                             <label class="form-label" for="user-email"
                                 >Почта</label
                             >
+                            <a href="" class="form-link">
+                                <svg class="form-icon" width="15" height="12">
+                                    <use
+                                        href="./images/icons.svg#icon-Vector-email"
+                                    ></use>
+                                </svg>
+                            </a>
                             <input
                                 type="email"
                                 class="form-input"
