footer_modal_css_2

--- a/index.html
+++ b/index.html
@@ -566,8 +566,8 @@
                                         href="https://goo.gl/maps/6L8buHxXjv6GgHtJ6"
                                         target="_blank"
                                         rel="noopener noindex nofollow"
-                                        >г. Киев, пр-т Леси Украинки, 26</a
-                                    >
+                                        >г. Киев, пр-т Леси Украинки, 26
+                                    </a>
                                 </li>
                                 <li class="footer-item">
                                     <a
