--- a/portfolio.html
+++ b/portfolio.html
@@ -341,8 +341,8 @@
                                         href="https://goo.gl/maps/6L8buHxXjv6GgHtJ6"
                                         target="_blank"
                                         rel="noopener noindex nofollow"
-                                        >г. Киев, пр-т Леси Украинки, 26</a
-                                    >
+                                        >г. Киев, пр-т Леси Украинки, 26
+                                    </a>
                                 </li>
                                 <li class="footer-item">
                                     <a
@@ -418,6 +418,34 @@
                             </li>
                         </ul>
                     </div>
+
+                    <form class="footer-form">
+                        <p class="footer-field-title">
+                            ПОДПИШИТЕСЬ НА РАССЫЛКУ
+                        </p>
+                        <div class="form-field-footer">
+                            <label
+                                class="form-label-footer"
+                                for="user-email-footer"
+                            ></label>
+                            <input
+                                type="email"
+                                class="form-input-footer"
+                                name="user-email-footer"
+                                id="user-email"
+                                placeholder="E-mail"
+                                required
+                            />
+                            <button type="submit" class="form-btn-footer">
+                                Подписаться
+                                <svg class="footer-icon" width="24" height="24">
+                                    <use
+                                        href="./images/icons.svg#icon-icon-send-1"
+                                    ></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </form>
                 </div>
             </footer>
         </main>
