footer_modal_finish_valid

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                                 type="email"
                                 class="form-input-footer"
                                 name="user-email-footer"
-                                id="user-email"
+                                id="user-email-footer"
                                 placeholder="E-mail"
                                 required
                             />
@@ -733,14 +733,14 @@
                         </div>
 
                         <div class="form-field">
-                            <label class="form-label" for="user-email"
+                            <label class="form-label" for="form-email"
                                 >Почта</label
                             >
                             <input
                                 type="email"
                                 class="form-input"
-                                name="user-email"
-                                id="user-email"
+                                name="form-email"
+                                id="form-email"
                                 placeholder=" "
                                 required
                             />
