--- a/portfolio.html
+++ b/portfolio.html
@@ -432,7 +432,7 @@
                                 type="email"
                                 class="form-input-footer"
                                 name="user-email-footer"
-                                id="user-email"
+                                id="user-email-footer"
                                 placeholder="E-mail"
                                 required
                             />
